CLDR-18948 Experiment with dual compaction